--- a/2 - CEP Project/style.css
+++ b/2 - CEP Project/style.css
@@ -8,6 +8,12 @@
 html {
     font-size: 62.5%;
     overflow-x: hidden;
+    background: rgb(32, 218, 86);
+    background: linear-gradient(
+      90deg,
+      rgba(32, 218, 86, 1) 23%,
+      rgba(0, 255, 156, 1) 100%
+    );
   }
 
 body {
@@ -57,3 +63,37 @@ body {
 .cep-list {
     list-style: none;
 }
+
+.saved-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: scroll;
+}
+
+.bookmarks-container {
+    width: 85%;
+    background-color: aquamarine;
+    margin-top: 2.4rem;
+    padding: 1.6rem 1.8rem 1.6rem 1.8rem;
+}
+
+
+.bookmarks-container:not(:first-child) {
+    margin-top: 1.2rem;
+}
+.cep-number {
+    margin-bottom: 1.2rem;
+}
+
+.cep-description-list {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cep-description-list li {
+    display: flex;
+    flex-direction: column;
+}
+
