--- a/2 - CEP Project/style.css
+++ b/2 - CEP Project/style.css
@@ -92,11 +92,6 @@ body {
     font-size: 1.6rem;
 }
 
-.saved-list {
-    background-color: var(--color-dark--1);
-    min-height: 100%
-}
-
 .main {
     min-height: 100%;
     display: flex;
@@ -110,6 +105,7 @@ body {
 .cep-list {
     list-style: none;
     font-size: 1.6rem;
+    align-self: flex-start;
 }
 
 .cep-list li {
@@ -160,10 +156,17 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow-y: scroll;
+    overflow-y: auto;
+    background-color: var(--color-dark--1);
+    height: 85%;
+}
+
+.saved-list:last-child {
+    margin-bottom: 9.6rem;
 }
 
 .bookmarks-container {
+    cursor: pointer;
     width: 85%;
     background-color: var(--color-dark--2);
     margin-top: 2.4rem;
